--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -34,6 +34,7 @@
   border: none;
   border-radius: 6px;
   color: #fff;
+  cursor: pointer;
   display: block;
   font-size: 16px;
   padding: 0.6em 0.9em;
